2012-01-03 Pierre Wieser <pwieser@trychlos.org>

	* src/core/na-iio-provider.c: Review NAIIOProvider interface.

	* src/core/na-iimporter.c:
	* src/core/na-importer.c: Review NAIImporterInterface.

	* src/core/na-factory-provider.c:
	* src/core/na-ifactory-provider.c: Review NAIFactoryProvider interface.

	* src/core/na-factory-object.c:
	* src/core/na-ifactory-object.c: Review NAIFactoryObject interface.

	* src/core/na-exporter.c:
	* src/core/na-iexporter.c: Review NAIExporter interface.

	* src/core/na-iduplicable.c: Review NAIDuplicable interface.

	* src/core/na-icontext.c: Review NAIContext interface.

	* src/test/test-iface-iface.c:
	* src/test/test-iface.c: Do some more tests on the interfaces.

	* src/utils/na-gconf2key.sh.in: Force GConf I/O provider to be read-only.

	* src/utils/console-utils.h: Remove superfluous 'glib-object.h' include.

	* src/utils/na-set-conf.c: New program.

	* src/core/na-settings.c:
	* src/core/na-settings.h
	(na_settings_set_string_ex,	na_settings_set_int_ex): New functions.

	* src/utils/Makefile.am: Updated accordingly.

	* src/utils/Makefile.am: Factorize library declarations.

2012-01-02 Pierre Wieser <pwieser@trychlos.org>

	* src/utils/na-gconf2key.sh.in:
	Introduces new '--admin' option for packagers and system administrators.
	Default for GConf to be only readable.

	* src/api/na-iimporter.h:
	* src/core/na-iimporter.c: Introduces version 2 of interface,
	deprecating NAIImporterCheckFn and NAIImporterAskUserFn definitions.

	* src/core/na-importer.c:
	* src/core/na-importer.h (na_importer_import_from_uris):
	Updated to new NAIImporter v2 interface, moving check and ask code here.

	* src/io-desktop/nadp-desktop-provider.c (iimporter_get_version):
	* src/io-desktop/nadp-reader.c (nadp_reader_iimporter_import_from_uri):
	* src/io-xml/naxml-provider.c (iimporter_get_version):
	* src/io-xml/naxml-reader.c (naxml_reader_import_from_uri):
	* src/nact/nact-assistant-import.c (assistant_apply):